# ttgo-display-idf-rs

./: Cargo.toml  Makefile  README.md  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
src/ble/: advertise.rs  gatt_server.rs  mod.rs
