[package]
name = "ttgo-display-idf-rs"
version = "0.1.0"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
incremental = true

[features]
native = ["esp-idf-sys/native"]

[dependencies]
# general
anyhow = {version = "1", features = ["backtrace"]}
mutex-trait = { version = "0.2" }
bitmask-enum = { version = "1.1" }
log = "0.4"

# platform
esp-idf-sys = { version = "0.31", features = ["binstart", "std"] }
esp-idf-svc = "0.41.2"
#esp-idf-hal = "0.37.3"
esp-idf-hal = { version = "0.37", git = "https://github.com/esp-rs/esp-idf-hal.git", rev = "4be35d7" }

# hal
embedded-hal = "=1.0.0-alpha.8"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2", features = ["unproven"] }
embedded-graphics = { version = "0.7" }
embedded-graphics-framebuf = "0.0.2"
display-interface-spi = { version = "0.4", git = "https://github.com/therealprof/display-interface.git", rev = "d61f3e7" }

# drivers
mipidsi = "^0.2"
#mipidsi = { path = "../mipidsi/" }


[build-dependencies]
embuild = "0.28"
anyhow = "1"
